storing generated list of word index combinations in a file on disk - ~60% disk usage improvement